<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="avox.samples.mediaplayer.EglActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnJoin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btnOpen"></Button>

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btnClose"></Button>

                <EditText
                    android:id="@+id/roomName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:importantForAutofill="no"
                    android:text="@string/rtmp_text"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_opengl_es"></TextView>

                <SurfaceView
                    android:id="@+id/gl_surface_view"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"></SurfaceView>

            </LinearLayout>
        </LinearLayout>  
</androidx.constraintlayout.widget.ConstraintLayout>