<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="avox.samples.mediaplayer.NavigationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnVK"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnVulkan"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnGL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnGL"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSource"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnSource"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRTC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="WebRTC"></Button>
            <Button
                android:id="@+id/btnMatrix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="播放矩阵"></Button>
        </LinearLayout>
        <!-- 硬解开关 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="硬解" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_hardware_decode"
                android:layout_width="120dp"
                android:layout_height="match_parent" android:checked="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IO方案选择" />
                <RadioGroup
                    android:id="@+id/radio_io_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radio_zlmediakit">
                    <RadioButton
                        android:id="@+id/radio_ffmpeg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FFmpeg IO"/>
                    <RadioButton
                        android:id="@+id/radio_zlmediakit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ZLMediaKit IO"/>
                </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注意事项" />
            <EditText
                android:id="@+id/et_multi_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:background="@android:drawable/editbox_background"
                android:enabled="false"
                android:focusable="false"
                android:text="1. egl不支持软解。\n2. zlmediakit不能打开本地文件\n3. egl不支持图像处理"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>